--- a/creditos/creditos/src/main/resources/application.properties
+++ b/creditos/creditos/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://localhost:3306/flex
+spring.datasource.url=jdbc:mariadb://localhost:3306/dimex
 spring.datasource.username=flex
 spring.datasource.password=flex
 spring.jpa.hibernate.ddl-auto=update
